<resources>
    <string name="app_name">Elniki</string>
    <string name="homePage">Домашняя страница</string>
    <string name="services">Услуги</string>
    <string name="accommodation">Проживание</string>
    <string name="resort">О курорте</string>
    <string name="contacts">Контакты</string>
    <string name="about_us_title">О нас</string>
    <string name="about_us_text">Поездка на выходные? Зимние каникулы? Или поездка в отпуск? Независимо от того, когда вы отдыхаете, на нашем курорте вы не будете испытывать недостатка в развлечениях!\n\n
    Наши горнолыжные трассы, доступные зимой, обеспечивают безграничное удовольствие от катания на склонах для любителей зимних видов спорта.
    </string>
    <string name="about_us_care">Мы заботимся о комфорте и безопасности наших гостей. Зимой наша команда опытных инструкторов готова помочь и поддержать всех, кто хочет улучшить свои навыки катания на склонах. Нужны ли вам уроки для начинающих или вы ищете более продвинутое обучение, наша команда всегда готова помочь.</string>
    <string name="about_us_additional_services">Помимо отличных условий для катания, мы предлагаем множество дополнительных развлечений и услуг. Наш просторный пункт проката снаряжения позволит вам подобрать подходящее оборудование, а наши уютные кафе и рестораны - идеальное место для отдыха и восстановления сил после насыщенного дня на склонах.</string>
    <string name="join">Присоединяйтесь !</string>
    <string name="information_title">Информация</string>
    <string name="information_text">Билетная касса горнолыжного склона:
    Открыта с 12 декабря по 20 марта
    Пн-Сб: 7:30-21:30\n\n
    Часы работы горнолыжного склона
    Пн-Сб: 8:00-21:00\n\n
    Лыжная школа:
    Тел: +79024718604
    e-mail: elniki-glc@mail.ru</string>
    <string name="recommendation">Рекомендуем</string>
    <string name="skislopes_title">Горнолыжные склоны</string>
    <string name="skislopes_text">Мы предлагаем три различные трассы, чтобы подарить вам незабываемые впечатления от катания на лыжах. Каким бы ни был ваш уровень мастерства, у нас найдется то, что подойдет именно вам.</string>
    <string name="main_route_title">1. Основной маршрут</string>
    <string name="main_route_text">Это отличный выбор для начинающих лыжников, которые только начинают свой путь. Эта пологая и дружелюбная трасса обеспечит вам идеальные условия для освоения основных техник и видов спуска, а ее пологий уклон не позволит вам развить высокую скорость.</string>
    <string name="intermediate_route_title">2. Маршрут промежуточный</string>
    <string name="intermediate_route_text">Промежуточный маршрут предлагает разнообразный уклон и пологие повороты для развития ваших навыков. Насладитесь динамичной ездой и почувствуйте прилив адреналина, преодолевая трудности, которые может предложить этот маршрут.</string>
    <string name="intermediate_route_on_orange">Если вы уже более опытный лыжник и ищете более серьезных испытаний, наша трасса для среднего уровня - идеальный выбор.</string>
    <string name="advanced_route_title">3. Продвинутый маршрут</string>
    <string name="advanced_route_text">Для любителей адреналина есть трасса для продвинутых. Она предлагает захватывающие и сложные трассы, которые удовлетворят даже самых опытных лыжников.</string>
    <string name="advanced_route_text2">Приготовьтесь к крутым склонам, быстрым поворотам и динамичному рельефу, который испытает ваши навыки на прочность. Не верите? Убедитесь в этом сами.</string>
    <string name="lift"><b>Каждый из наших маршрутов имеет свой собственный подъемник</b>, чтобы обеспечить вам комфортное и беспроблемное пользование ими.\n\n
    Какой бы маршрут вы ни выбрали, вы можете быть уверены в удобном доступе к подъемнику без огромных очередей.</string>
    <string name="firstTime_title">Это ваш первый раз на склонах?</string>
    <string name="firstTime_text">Не волнуйтесь! На нашем курорте есть дорожка для новичков, оборудованная Т-образным подъемником.</string>
    <string name="instructors1"><b>Если вам нужна помощь инструктора</b>, добро пожаловать в нашу лыжную школу, где обучение превращается в удовольствие!</string>
    <string name="instructors2">Уроки подбираются с учетом ваших индивидуальных потребностей. Неважно, были ли вы никогда на склонах или катались на лыжах несколько лет, наши инструкторы помогут вам развить и улучшить ваши навыки.</string>
    <string name="skipass">skipass</string>
<string name="skipass_description">SKIPASS на спуск, дневной SKIPASS, сезонный SKIPASS? Неважно, сколько дней вы планируете кататься на борде или лыжах, у нас есть то, что вам нужно! Загляните к нам, и вы получите доступ к бесконечному веселью на наших склонах в течение всего сезона!</string>
    <string name="watch">Смотреть</string>
<string name="tracks">Трассы</string>
    <string name="tracks_description">Мы предлагаем три различных лыжных маршрута, чтобы подарить вам незабываемые впечатления от катания на склонах. Независимо от вашего уровня квалификации, у нас есть что-то, что вам подойдет.</string>
<string name="forest_roads">Горные тропы</string>
    <string name="forest_roads_descr">Приготовьтесь к незабываемым приключениям и захватывающим видам. Горные тропы в этом районе идеально подходят для путешествий, особенно для любителей природы. Выберите маршрут, соответствующий вашему уровню подготовки, и отправляйтесь покорять горы!</string>
<string name="rent">Прокат</string>
    <string name="rent_description">В нашем прокате вас ждут новенькие доски и лыжи. Наши сотрудники будут рады помочь вам выбрать идеальное снаряжение, которое обеспечит вам комфорт и уверенность на склоне. Приходите к нам и вооружитесь идеальным оборудованием!</string>
<string name="meet_us">Познакомьтесь с нами!</string>
    <string name="about_us">О нас</string>
    <string name="footer1">Авторские права 2024</string>
    <string name="footer2">деревня Ельники.\n\nДобрянский городской округ, Пермский край</string>
    <string name="rental">Оборудование</string>
    <string name="open_hours">Открыто: 7:30–21:30</string>
<string name="new_rent">Новинка!</string>
    <string name="snowtubing">Сноутюбинг</string>
<string name="snowtubing_descr">Не хотите кататься на лыжах? Не беда! Наслаждайтесь катанием на сноутюбинге по снегу!</string>
    <string name="ski">Лыжи</string>
<string name="ski_price">От 400 рублей/час</string>
    <string name="ski_rent_descr_start">Для Вас тяжело подобрать размер? Нет проблем!</string>
<string name="ski_rent_descr">У нас вы найдете идеальное снаряжение для лыжников любого уровня.</string>
    <string name="ski_rent_descr_2">Наше лыжное оборудование обеспечивает превосходный контроль, стабильность и точность во время катания на склонах.</string>
<string name="snowboard">Сноуборды</string>
    <string name="snowboard_rent_choice">Если вы предпочитаете сноуборд, у нас есть множество вариантов на ваш выбор.</string>
<string name="snowboard_descr">Мы покупаем наши сноуборды, ориентируясь на разные стили катания - от фристайла до сноукросса. Они обеспечивают отличное сцепление с поверхностью, гибкость и правильную реакцию на изменение условий на склонах.</string>
    <string name="run_ski">Беговые лыжи</string>
<string name="run_ski_price">От 200 рублей/час</string>
    <string name="run_ski_fan">У нас есть кое-что и для любителей беговых лыж!</string>
<string name="run_ski_descr">Независимо от того, предпочитаете ли вы классический или коньковый стиль, у нас вы найдете подходящее снаряжение для этого вида спорта.</string>
    <string name="tracking">Трекинговые палки</string>
<string name="tracking_descr">Если вы планируете отправиться в поход по окрестностям, наш сервис по прокату треккинговых палок предложит вам треккинговые палки.</string>
    <string name="tracking_descr_2">Эти палки обеспечивают дополнительную поддержку и баланс во время походов в горы.\nОни легкие, регулируемые и имеют эргономичные ручки для удобства во время длительных прогулок.</string>
<string name="bikes">Горные велосипеды</string>
    <string name="bikes_price">От 500 рублей/час</string>
<string name="bikes_ad">Как насчет того, чтобы исследовать сельскую местность на двух колесах?</string>
    <string name="bikes_descr">Наша компания по прокату предлагает горные велосипеды по доступной цене. Мы проверяем техническое состояние велосипедов (особенно тормозов) до и после каждой поездки. Так что вы сможете наслаждаться приключениями, открывать для себя красивые виды и взбираться на высокие холмы.</string>
    <string name="text_ve">ВЕ</string>
    <string name="text_ski">SKI</string>
    <string name="text_d">D TIME</string>
    <string name="text_elniki">ЕЛЬНИКИ</string>
    <string name="address_text">деревня Ельники\nДобрянский городской округ\nПермский край</string>
    <string name="_2024_elniki">© 2024 Elniki</string>
    <string name="contact">Email: elniki-glc@mail.ru\nPhone: +79024718604</string>
    <string name="Title">Добро пожаловать в Ельники</string>
    <string name="BestHistory">Лучшие истории начинаются здесь</string>
    <string name="Services">Услуги</string>
    <string name="nature">Красивые пейзажи и природные виды? Пикники у костра? \nА может быть, катание на горных лыжах и сноубордах?</string>
    <string name="Chairlift">Кресельный подъемник</string>
    <string name="FirstChairlift">Первый на горнолыжном курорте в Пермском крае</string>
    <string name="greattrails">18 отличных трасс</string>
    <string name="Trailsforallskilllevels">Трассы для любых уровней подготовки</string>
    <string name="modernsnowpark">Широкий современный сноупарк международного уровня</string>
    <string name="Modern">Современный сноупарк</string>
    <string name="Maximumelevation">Максимальный перепад высот на трассах</string>
    <string name="meters">310 метров</string>
    <string name="skipass_type">Тип скипасса</string>
    <string name="adult_rate">Тариф Взрослый</string>
    <string name="child_rate">Тариф Детский</string>
    <string name="card_cost">Стоимость карты</string>
    <string name="card_cost_value">100 руб.</string>
    <string name="single_lift">Разовый подъём на подъёмнике</string>
    <string name="single_lift_adult">300 руб.</string>
    <string name="single_lift_child">200 руб.</string>
    <string name="walking_rate">Прогулочный тариф (подъем и спуск на кресельном подъемнике)</string>
    <string name="walking_rate_adult">500 руб.</string>
    <string name="walking_rate_child">400 руб.</string>
    <string name="one_day_lift">Подъемник на 1 день</string>
    <string name="one_day_lift_adult">2000 руб.</string>
    <string name="one_day_lift_child">1200 руб.</string>
    <string name="training_lift">Учебный подъемник</string>
    <string name="training_lift_adult">550 руб.</string>
    <string name="training_lift_child">450 руб.</string>
    <string name="vip_lift">VIP-подъемник на 1 день</string>
    <string name="vip_lift_value">5000 руб.</string>
    <string name="adr">Адрес \nДеревня Ельники, \n1 Добрянский городской округ, \nПермский край, 618719</string>
    <string name="Cont">Контакт</string>
    <string name="Write">Напишите нам!</string>
    <string name="Mess">Сообщение</string>
    <string name="email">Электронный адрес</string>
    <string name="WriteEmail">Введите адрес электронной почты</string>
    <string name="notRobot">Я не робот</string>
    <string name="gdpr">Я согласен с GDPR (необязательно)</string>
    <string name="Copy">Отправьте мне копию (необязательно)</string>
    <string name="Kassa">Касса горнолыжного спуска:\nОткрыта круглый год\nПн–Вс: 7:30–21:30</string>
    <string name="timework">Время работы склона\nПн–Вс: 8:00–21:00</string>
    <string name="skiSchool">Лыжная школа:\nТел: +48 123 456 789\nэлектронная почта: szkolka@beskidtime.pl</string>
    <string name="write_your_message_here">Напишите своё сообщение здесь</string>
    <string name="write_your_email_here">Напишите здесь свою почту</string>
    <string name="send">Отправить</string>
</resources>