<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:openDrawer="start"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    tools:context=".BaseActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">

        <include layout="@layout/activity_main_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cont"
            android:textSize="34sp"
            android:textColor="@color/orange600"
            style="@style/MarginStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Write"
            android:textSize="34sp"
            android:textColor="@color/black"
            style="@style/MarginStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mess"
            android:textSize="16sp"
            android:paddingBottom="8dp"
            style="@style/MarginStyle"/>

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:background="@android:drawable/edit_text"
            android:gravity="top"
            android:padding="@dimen/padding_size"
            android:hint="@string/write_your_message_here"
            android:autofillHints="message"
            style="@style/MarginStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            style="@style/MarginStyle"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@android:drawable/edit_text"
            android:padding="@dimen/padding_size"
            android:hint="@string/write_your_email_here"
            android:autofillHints="emailAddress"
            style="@style/MarginStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WriteEmail"
            android:textSize="12sp"
            android:paddingBottom="@dimen/padding_size"
            style="@style/MarginStyle"/>

        <!-- Checkboxes -->
        <CheckBox
            android:id="@+id/robotCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notRobot"
            style="@style/MarginStyle"/>

        <CheckBox
            android:id="@+id/rodoCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gdpr"
            style="@style/MarginStyle"/>

        <CheckBox
            android:id="@+id/copyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Copy"
            style="@style/MarginStyle"
            android:paddingBottom="@dimen/padding_size"/>

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_size"
            android:text="@string/send"
            android:textAlignment="center"
            android:theme="@style/button_background"
            style="@style/MarginStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/Brownish600"
            android:padding="@dimen/padding_size"
            android:gravity="center">

            <TextView
                style="@style/MarginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adr"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:padding="@dimen/padding_size"/>

            <ImageView
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:scaleType="centerCrop"
                android:src="@drawable/map"
                android:padding="@dimen/padding_size"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_size"
            android:paddingBottom="8dp"
            android:text="@string/Kassa"
            android:textAlignment="center"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_size"
            android:paddingBottom="8dp"
            android:text="@string/timework"
            android:textAlignment="center"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_size"
            android:text="@string/skiSchool"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/padding_size"/></LinearLayout>

        <include layout="@layout/footer"/>
    </LinearLayout>
</ScrollView>
<com.google.android.material.navigation.NavigationView
android:id="@+id/navigationView"
android:layout_width="wrap_content"
android:layout_height="match_parent"
app:menu="@menu/drawer_items"
app:headerLayout="@layout/drawer_header"
android:layout_gravity="start" />


    </androidx.drawerlayout.widget.DrawerLayout>