<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:src="@drawable/logo_image" /> <!-- замените на путь к изображению вашего логотипа -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/homePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homePage"
        android:layout_margin="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:layout_margin="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/accommodation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accommodation"
        android:layout_margin="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/resort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resort"
        android:layout_margin="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:layout_margin="10dp"
        android:textSize="20sp"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_height="56dp"
        android:layout_width="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:background="@null"
        android:layout_marginBottom="35dp"
        android:scaleType="fitCenter"/>


</RelativeLayout>