<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:openDrawer="start"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    tools:context=".BaseActivity">


    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/activity_main_content" />


        <TextView
            android:id="@+id/services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            style="@style/LabelStyle"
            android:text="@string/services" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ski_man"
                android:layout_width="250dp"
                android:layout_height="370dp"
                android:src="@drawable/ski_man" />

            <TextView
                android:id="@+id/skipass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/skipass"
                style="@style/LabelStyle"
                android:background="@color/orange"/>

        </LinearLayout>

        <TextView
            android:id="@+id/skipass_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            style="@style/TextStyle"
            android:text="@string/skipass_description" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/watch" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/tracks"
                style="@style/LabelStyle"
                android:background="@color/red"/>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="370dp"
                android:src="@drawable/ski_in_snow" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            style="@style/TextStyle"
            android:text="@string/tracks_description" />

        <Button
            android:id="@+id/buttonSkiSlopes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/watch" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="370dp"
                android:src="@drawable/forest" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/forest_roads"
                style="@style/LabelStyle"
                android:background="@color/blue"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            style="@style/TextStyle"
            android:text="@string/forest_roads_descr" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/rent"
                style="@style/LabelStyle"
                android:background="@color/darkblue"/>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="370dp"
                android:src="@drawable/ski_girl" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            style="@style/TextStyle"
            android:text="@string/rent_description" />

        <Button
            android:id="@+id/buttonServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/watch" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/meet_us" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/meet_us"
                android:textSize="24sp"
                android:textColor="@color/white"
                style="@style/LabelStyle"
                android:background="@android:color/transparent" />

        </FrameLayout>

        <Button
            android:id="@+id/buttonAboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:text="@string/about_us" />

        <include layout="@layout/footer" />
    </LinearLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/drawer_items"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start" />


</androidx.drawerlayout.widget.DrawerLayout>