<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/MarginStyle">

    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ve"
                android:textAppearance="@style/Large.Black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ski"
                android:textAppearance="@style/Large.Blue400" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_d"
                android:textAppearance="@style/Large.Black" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/text_elniki"
            android:textAppearance="@style/Medium" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/MenuButton"
        style="@style/ButtonSize"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:onClick="onMenuButtonClick"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

